# sqlite_api

./: .gitmodules  CMakeLists.txt  dbsettings.yml  main.cpp
doc/: requirements.md
googletest/: CMakeLists.txt
inc/: connector.h  db_interface.h  error_handler.h  query.h
src/: connector.cpp  error_handler.cpp  query.cpp
test/: connector_test.cpp  query_test.cpp
